// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docusaurus-plugin-content-pages loads simple pages 1`] = `
[
  {
    "permalink": "/",
    "source": "@site/src/pages/index.js",
    "type": "jsx",
  },
  {
    "permalink": "/typescript",
    "source": "@site/src/pages/typescript.tsx",
    "type": "jsx",
  },
  {
    "description": "Markdown index page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/hello/",
    "source": "@site/src/pages/hello/index.md",
    "title": "Index",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "my MDX page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "description": "my MDX page",
      "slug": "/custom-mdx/slug",
      "title": "MDX page",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/custom-mdx/slug",
    "source": "@site/src/pages/hello/mdxPage.mdx",
    "title": "MDX page",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/hello/translatedJs",
    "source": "@site/src/pages/hello/translatedJs.js",
    "type": "jsx",
  },
  {
    "description": "translated Markdown page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/hello/translatedMd",
    "source": "@site/src/pages/hello/translatedMd.md",
    "title": undefined,
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/hello/world",
    "source": "@site/src/pages/hello/world.js",
    "type": "jsx",
  },
  {
    "description": "This page links to other pages using file paths.",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Page A",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/linking/page-a",
    "source": "@site/src/pages/linking/page-a.md",
    "title": "Page A",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "This page links back to Page A.",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Page B",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/linking/page-b",
    "source": "@site/src/pages/linking/page-b.md",
    "title": "Page B",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "This is a nested page that links to parent-level pages.",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Deep Page",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/linking/nested/deep-page",
    "source": "@site/src/pages/linking/nested/deep-page.md",
    "title": "Deep Page",
    "type": "mdx",
    "unlisted": false,
  },
]
`;

exports[`docusaurus-plugin-content-pages loads simple pages with french translations (translate: false) 1`] = `
[
  {
    "permalink": "/fr/",
    "source": "@site/src/pages/index.js",
    "type": "jsx",
  },
  {
    "permalink": "/fr/typescript",
    "source": "@site/src/pages/typescript.tsx",
    "type": "jsx",
  },
  {
    "description": "Markdown index page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/hello/",
    "source": "@site/src/pages/hello/index.md",
    "title": "Index",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "my MDX page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "description": "my MDX page",
      "slug": "/custom-mdx/slug",
      "title": "MDX page",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/custom-mdx/slug",
    "source": "@site/src/pages/hello/mdxPage.mdx",
    "title": "MDX page",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/fr/hello/translatedJs",
    "source": "@site/src/pages/hello/translatedJs.js",
    "type": "jsx",
  },
  {
    "description": "translated Markdown page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/hello/translatedMd",
    "source": "@site/src/pages/hello/translatedMd.md",
    "title": undefined,
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/fr/hello/world",
    "source": "@site/src/pages/hello/world.js",
    "type": "jsx",
  },
  {
    "description": "This page links to other pages using file paths.",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Page A",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/linking/page-a",
    "source": "@site/src/pages/linking/page-a.md",
    "title": "Page A",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "This page links back to Page A.",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Page B",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/linking/page-b",
    "source": "@site/src/pages/linking/page-b.md",
    "title": "Page B",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "This is a nested page that links to parent-level pages.",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Deep Page",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/linking/nested/deep-page",
    "source": "@site/src/pages/linking/nested/deep-page.md",
    "title": "Deep Page",
    "type": "mdx",
    "unlisted": false,
  },
]
`;

exports[`docusaurus-plugin-content-pages loads simple pages with french translations 1`] = `
[
  {
    "permalink": "/fr/",
    "source": "@site/src/pages/index.js",
    "type": "jsx",
  },
  {
    "permalink": "/fr/typescript",
    "source": "@site/src/pages/typescript.tsx",
    "type": "jsx",
  },
  {
    "description": "Markdown index page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/hello/",
    "source": "@site/src/pages/hello/index.md",
    "title": "Index",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "my MDX page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "description": "my MDX page",
      "slug": "/custom-mdx/slug",
      "title": "MDX page",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/custom-mdx/slug",
    "source": "@site/src/pages/hello/mdxPage.mdx",
    "title": "MDX page",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/fr/hello/translatedJs",
    "source": "@site/i18n/fr/docusaurus-plugin-content-pages/hello/translatedJs.js",
    "type": "jsx",
  },
  {
    "description": "translated Markdown page (fr)",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/hello/translatedMd",
    "source": "@site/i18n/fr/docusaurus-plugin-content-pages/hello/translatedMd.md",
    "title": undefined,
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/fr/hello/world",
    "source": "@site/src/pages/hello/world.js",
    "type": "jsx",
  },
  {
    "description": "This page links to other pages using file paths.",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Page A",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/linking/page-a",
    "source": "@site/src/pages/linking/page-a.md",
    "title": "Page A",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "This page links back to Page A.",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Page B",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/linking/page-b",
    "source": "@site/src/pages/linking/page-b.md",
    "title": "Page B",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "This is a nested page that links to parent-level pages.",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Deep Page",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/linking/nested/deep-page",
    "source": "@site/src/pages/linking/nested/deep-page.md",
    "title": "Deep Page",
    "type": "mdx",
    "unlisted": false,
  },
]
`;

exports[`docusaurus-plugin-content-pages loads simple pages with last update 1`] = `
[
  {
    "permalink": "/",
    "source": "@site/src/pages/index.js",
    "type": "jsx",
  },
  {
    "permalink": "/typescript",
    "source": "@site/src/pages/typescript.tsx",
    "type": "jsx",
  },
  {
    "description": "Markdown index page",
    "editUrl": "url placeholder",
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": 1539502055000,
    "lastUpdatedBy": "Author",
    "permalink": "/hello/",
    "source": "@site/src/pages/hello/index.md",
    "title": "Index",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "my MDX page",
    "editUrl": "url placeholder",
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "description": "my MDX page",
      "slug": "/custom-mdx/slug",
      "title": "MDX page",
    },
    "lastUpdatedAt": 1539502055000,
    "lastUpdatedBy": "Author",
    "permalink": "/custom-mdx/slug",
    "source": "@site/src/pages/hello/mdxPage.mdx",
    "title": "MDX page",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/hello/translatedJs",
    "source": "@site/src/pages/hello/translatedJs.js",
    "type": "jsx",
  },
  {
    "description": "translated Markdown page",
    "editUrl": "url placeholder",
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": 1539502055000,
    "lastUpdatedBy": "Author",
    "permalink": "/hello/translatedMd",
    "source": "@site/src/pages/hello/translatedMd.md",
    "title": undefined,
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/hello/world",
    "source": "@site/src/pages/hello/world.js",
    "type": "jsx",
  },
  {
    "description": "This page links to other pages using file paths.",
    "editUrl": "url placeholder",
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Page A",
    },
    "lastUpdatedAt": 1539502055000,
    "lastUpdatedBy": "Author",
    "permalink": "/linking/page-a",
    "source": "@site/src/pages/linking/page-a.md",
    "title": "Page A",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "This page links back to Page A.",
    "editUrl": "url placeholder",
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Page B",
    },
    "lastUpdatedAt": 1539502055000,
    "lastUpdatedBy": "Author",
    "permalink": "/linking/page-b",
    "source": "@site/src/pages/linking/page-b.md",
    "title": "Page B",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "This is a nested page that links to parent-level pages.",
    "editUrl": "url placeholder",
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "title": "Deep Page",
    },
    "lastUpdatedAt": 1539502055000,
    "lastUpdatedBy": "Author",
    "permalink": "/linking/nested/deep-page",
    "source": "@site/src/pages/linking/nested/deep-page.md",
    "title": "Deep Page",
    "type": "mdx",
    "unlisted": false,
  },
]
`;
